# lerobot-pusht-lab

./: .env.example  .gitignore  CLAUDE.md  HANDOVER.md  PLAN.md  RUNPOD_SETUP.md  pyproject.toml  requirements.txt
configs/: act_pusht.yaml  diffusion_pusht.yaml  mlp_bc_pusht.yaml
outputs/inspection/: lerobot_pusht.md  lerobot_svla_so101_pickplace.md
scripts/: compare_policies.py  eval_all.py  eval_lerobot.py  eval_mlp_bc.py  inspect_pusht.py  inspect_so101.py  train_act.sh  train_diffusion.sh  train_mlp_bc.py  upload_to_hub.py
src/lerobot_pusht_lab/data/: inspection.py
src/lerobot_pusht_lab/eval/: compare.py  lerobot_adapter.py  runner.py
src/lerobot_pusht_lab/hub/: upload.py
src/lerobot_pusht_lab/policies/: mlp_bc.py
src/lerobot_pusht_lab/training/: imagenet_norm_guard.py
tests/: test_data_inspection.py  test_eval_runner.py  test_mlp_bc.py
