[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "lerobot-pusht-lab"
version = "0.1.0"
description = "Imitation learning lab: Diffusion Policy, ACT, and MLP-BC on PushT"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]  # pycodestyle errors, pyflakes, isort, pyupgrade
ignore = ["E501"]               # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
